--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,7 @@
 <mat-toolbar>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <mat-icon>menu</mat-icon>
-    </button>
     <span>Country Viewer</span>
     <span class="example-spacer"></span>
-    <button mat-raised-button (click)="onContribute()" >Contribute
+    <button mat-raised-button (click)="onContribute()" >Other Projects
     </button>
   </mat-toolbar>
   
